# calc-haskell

./: CHANGELOG.md  README.md  hie.yaml  myCalc.cabal
app/: Main.hs
app/Calculator/: Types.hs
app/Parser/: Parse.hs
src-lib/Calculator/: Calculate.hs  Types.hs
src-lib/Parser/: Parse.hs
src-test/: Main.hs
