cabal-version:      2.4
name:               myCalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Paritosh Raj
maintainer:         paritosh@hasura.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable myCalc
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , myCalc
                    , text
                    , megaparsec
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:   src-lib
    exposed-modules:  Calculator.Calculate
                    , Parser.Parse
                    , Calculator.Types
    build-depends:    base ^>=4.14.1.0
                    , mtl
                    , megaparsec
                    , text

test-suit myCalc-test
    hs-source-dirs:   src-test
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
                    , QuickCheck